--- a/Credenciado.html
+++ b/Credenciado.html
@@ -35,10 +35,10 @@
 </header>
 <main>
     <br><br>
-    <a id="cada" href="https://api.whatsapp.com/send?phone=5519971282781&text=Quero%20saber%20sobre%20os%20cart%C3%B5es" target="_blank" rel="noopener noreferrer" >FALE COM UM REPRESENTANTE</a>
+    <a id="cada" href="https://api.whatsapp.com/send?phone=5514981395202&text=entrei%20no%20seu%20site%2C%20gostaria%20de%20saber%20mais%20sobre%20os%20cart%C3%B5es" target="_blank" rel="noopener noreferrer" >FALE COM UM REPRESENTANTE</a>
     <br>
 
-    <form action="https://formsubmit.co/gestaoderhbrasilcard@gmail.com" method="post">
+    <form action="https://formsubmit.co/dbcarmobrasilcard@gmail.com" method="post">
     <h2 id="for" >Seja Nosso Parceiro. <br>
     </h2>
 
